--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.4",
     "react-hot-toast": "^2.4.0",
+    "sass": "^1.62.1",
     "sharp": "^0.31.3",
     "simplebar-react": "^3.2.1",
     "tailwind-merge": "^1.10.0",
@@ -51,9 +52,9 @@
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.9.5"
   }
