--- a/.env
+++ b/.env
@@ -2,21 +2,22 @@
 # NextAuth.js Configuration
 # ------------------------
 
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_SECRET=supperancientapisecret
+NEXTAUTH_URL=http://localhost:3000
 
 # ------------------------
 # OAuth Providers
 # ------------------------
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=915184724148-sp0h0er85gvbkdn87uif6ja4q672ta8h.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # ------------------------
 # Database
 # ------------------------
 
-DATABASE_URL='mysql://ejxzh6bkud0ztqz05wh5:pscale_pw_4XsqPfrnTuAPidhjyVbSTi7sfo261Cen4a4R8b5I0rz@aws.connect.psdb.cloud/similarity?sslaccept=strict'
+DATABASE_URL='mysql://zo1jxk8nm2cofmqchj9p:pscale_pw_TwBdO85PJNIFRbF9k9olIHTR33BwH4ZHeYS58GimbEv@aws.connect.psdb.cloud/similarity?sslaccept=strict'
+
 
 # ------------------------
 # OpenAI
